--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+.card__layout {
+    height: 520px;
+    width: 500px;
+    background-color: #d4cfcf;
+    margin: 20px auto;
+    text-align: center;
+    padding: 4rem;
+    border-radius: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card__input {
+    width: 200px;
+    height: 30px;
+    padding: 0px 10px;
+    text-align: center;
+    margin: 20px;
+    border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card__btn {
+    padding: 10px 20px;
+    font-weight: 800;
+    border-radius: 10px;
+    border: 1px solid green;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.history__container {
+    margin-top: 5px;
+    overflow-y: scroll;
+    height: 300px;
+    border-radius: 10px;
+    border: 1px solid green;
 }
 
-.App-link {
-  color: #61dafb;
+.history__heading {
+    text-align: start;
+    padding-left: 10px;
+    border-bottom: 1px solid black;
+    height: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.history__ptag {
+    margin: 2px;
+    clear: both;
+    border-bottom: 2px dotted black;
+    padding: 0 10px;
+    line-height: 15px;
+}
+
+.start {
+    float: left;
+    font-weight: 700;
+    text-align: left;
+}
+
+.end {
+    float: right;
+    font-weight: 500;
+    text-align: right;
 }
